# emergency-room-demand-forecast

./: .gitignore  Readme.md  environment.yml  mlops_structure.json  project_outline.json  pyproject.toml  requirements.txt  setup.py
Notebook/: main.ipynb
configs/: default.yaml  evaluation.yaml  training.yaml
docs/: architecture.md  execution.md
src/: config.py  data_loader.py  evaluate.py  predict.py  preprocessing.py  train.py  utils.py
tests/: test_data_loader.py  test_evaluate.py  test_preprocessing.py  test_train.py
